[project]
name = "engineering"
version = "0.1.0"
description = "engineering using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
engineering = "engineering.main:run"
run_crew = "engineering.main:run"
train = "engineering.main:train"
replay = "engineering.main:replay"
test = "engineering.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
